<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Aplicacion">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/pesoengigas"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/version"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nombre"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/descarga"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/fechalanzamientoapp"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/costo"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.521"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button3"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.739" android:layout_marginBottom="84dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/sistemaoperativoid"
            android:ems="10"
            android:id="@+id/editText7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="96dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="84dp"/>
</android.support.constraint.ConstraintLayout>