<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".nuevaAplicacion">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/pesoengigas"
            android:ems="10"
            android:id="@+id/txt_pesoengigas" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/version"
            android:ems="10"
            android:id="@+id/txt_version" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_pesoengigas" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nombre"
            android:ems="10"
            android:id="@+id/txt_nombre" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_version" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/descarga"
            android:ems="10"
            android:id="@+id/txt_descarga" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
            app:layout_constraintHorizontal_bias="0.478"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/fechalanzamientoapp"
            android:ems="10"
            android:id="@+id/txt_fechalanzamiento" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_descarga"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/costo"
            android:ems="10"
            android:id="@+id/txt_costo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fechalanzamiento"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/sistemaoperativoid"
            android:ems="10"
            android:id="@+id/txt_sistemaoperativoid" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_costo"/>
    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_sistemaoperativoid"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="28dp"/>
</android.support.constraint.ConstraintLayout>