<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SistemaOperativo">


    <Button
            android:text="@string/borrar"
            android:layout_width="111dp"
            android:layout_height="54dp"
            android:id="@+id/btn-delete" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.941"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn-update"
            app:layout_constraintBottom_toTopOf="@+id/btn-manage-products"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="111dp"
            android:layout_height="56dp"
            android:id="@+id/btn-update" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="220dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintVertical_bias="0.942" app:layout_constraintBottom_toTopOf="@+id/btn-create-product"/>
    <Button
            android:text="@string/aplicaciones"
            android:layout_width="116dp"
            android:layout_height="57dp"
            android:id="@+id/btn-manage-products" app:layout_constraintStart_toStartOf="@+id/btn-delete"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn-create-product"/>
    <Button
            android:text="@string/aplicacion"
            android:layout_width="113dp"
            android:layout_height="55dp"
            android:id="@+id/btn-create-product" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="252dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="628dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre"
            android:hint="@string/nombre" android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_version"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_version"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre" app:layout_constraintEnd_toEndOf="@+id/txt_nombre"
            android:hint="@string/version" android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-openning-date" app:layout_constraintVertical_bias="0.111"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt-openning-date"
            app:layout_constraintStart_toStartOf="@+id/txt_version"
            app:layout_constraintEnd_toEndOf="@+id/txt_version" android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/fechalanzamiento" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pesoengigas" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pesoengigas"
            android:hint="@string/pesoengigas" app:layout_constraintStart_toStartOf="@+id/txt-openning-date"
            app:layout_constraintEnd_toEndOf="@+id/txt-openning-date" android:layout_marginTop="296dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.007" app:layout_constraintBottom_toTopOf="@+id/radioButton"/>
    <RadioButton
            android:text="@string/instalado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" android:layout_marginTop="384dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_pesoengigas"
            app:layout_constraintEnd_toEndOf="@+id/txt_pesoengigas" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>