<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuevoRegistro">

    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registrar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.842"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="84dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_version" android:hint="@string/nombre"
            app:layout_constraintHorizontal_bias="0.478" app:layout_constraintVertical_bias="0.54"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_version"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_nombre" android:layout_marginTop="164dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/version"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_costo"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_costo"
            app:layout_constraintStart_toStartOf="@+id/txt_version"
            app:layout_constraintEnd_toEndOf="@+id/txt_version" android:layout_marginTop="276dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_pesoengigas"
            android:hint="@string/fechalanzamiento"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pesoengigas" android:layout_marginTop="388dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/rb-instalado" android:hint="@string/pesoengigas"
            app:layout_constraintStart_toStartOf="@+id/txt_costo" app:layout_constraintEnd_toEndOf="@+id/txt_costo"/>
    <RadioButton
            android:text="@string/instalado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb-instalado" app:layout_constraintEnd_toEndOf="@+id/txt_pesoengigas"
            app:layout_constraintStart_toStartOf="@+id/txt_pesoengigas" android:layout_marginTop="444dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_registrar"/>
</android.support.constraint.ConstraintLayout>